--- a/ui/components/style/user_says.css
+++ b/ui/components/style/user_says.css
@@ -1,3 +1,8 @@
-.user{
-
+#user-says{
+  background-color: #dddddd;
+  text-align: right;
+  /* margin: 8px 0 10px; */
+  padding: 8px 16px;
+  /* max-width: 65%; */
+  border-radius: 15px 15px 5px 5px;
 }
