--- a/ui/components/style/window.css
+++ b/ui/components/style/window.css
@@ -1,5 +1,8 @@
+body{
+  font: bold 1em sans-serif;
+}
 /* Hide background */
-.black_overlay {
+.black_overlay{
   /* display: none; */
   position: absolute;
   top: 0%;
@@ -14,22 +17,50 @@
  
 }
 /* Chat window body */
-.bot-window {
+.bot-window{
   /* display: none; */
   position: absolute;
   top: 25%;
   left: 25%;
-  width: 40%;
+  width: 30%;
   height: 50%;
   padding: 16px;
-  border: 4px solid gray;
+  border: 1px solid gray;
   background-color: white;
   z-index: 1002;
   overflow: auto;
   border-radius: 40px;
 }
-
+/* Top of window body */
 .bot-header{
-  background-color: aqua;
-
+  height: 30px;
+  width: 100%;
+  padding: 0;
+  text-align: right;
 }
+/* Bot close button */
+.bot-header a{
+  border:gray solid 3px;
+  border-radius: 10px;
+  padding: .5em;
+  text-decoration: none;
+  font: #000000;
+}
+
+/* Opens bot once it has been closed */
+
+#bot-hide{
+  width: 20%;
+  background-color: cornflowerblue;
+  border-radius: 10px;
+  padding: 2em;
+  text-align: center;
+}
+
+#bot-hide a{
+  text-decoration: none;
+  color: #ffffff;
+  font: bold .6em sans-serif;
+}
+
+/* User input */
