--- a/ui/components/style/input.css
+++ b/ui/components/style/input.css
@@ -6,22 +6,31 @@ button, input {
   top: 360px;
   padding: 5px; */
   font: bold 1em sans-serif;
-  margin-top: 15em;
+  margin-top: 5%;
+  margin-left: 1em;
   border: .5px solid #333;
   border-radius: 5px;
   background: none;
   cursor: pointer;
+  background-color: #ffffff;
+  border-color: #dddddd;
+}
+
+form{
+  background-color: #dddddd;
 }
 
 input{
   width: 70%;
   height: 30px;
+  /* margin-top: 3em; */
 }
 
 button{
-  width: 20%;
+  width: 15%;
   height: 30px;
   text-align: center;
+  color: #333;
 }
 
 /* button:after {
@@ -35,6 +44,11 @@ button:focus {
   color: #FFF;
 }
 
-.user-input{
-  margin-top: 3em;
+#user-input{
+  /* margin-top: 3em; */
+  width: 100%;
+  height: 10%;
+  position: absolute;
+  border-top: 1px solid #dddddd;
+  /* background-color: #dddddd; */
 }
