--- a/ui/components/style/user_says.css
+++ b/ui/components/style/user_says.css
@@ -1,8 +1,9 @@
 #user-says{
-  background-color: #dddddd;
+  background-color: #5878d0;
   text-align: right;
   /* margin: 8px 0 10px; */
   padding: 8px 16px;
-  /* max-width: 65%; */
+  max-width: 65%;
+  margin-left: 5%;
   border-radius: 15px 15px 5px 5px;
 }
