--- a/ui/components/style/window.css
+++ b/ui/components/style/window.css
@@ -1,5 +1,5 @@
 body{
-  font: bold 1em sans-serif;
+  font: 1em sans-serif;
 }
 /* Hide background */
 .black_overlay{
@@ -24,27 +24,31 @@ body{
   left: 25%;
   width: 30%;
   height: 50%;
-  padding: 16px;
+  padding: 10px;
+  padding-left: 0;
   border: 1px solid gray;
-  background-color: white;
+  background-color: #dddddd;
   z-index: 1002;
   overflow: auto;
-  border-radius: 40px;
+  border-radius: 10px;
 }
 /* Top of window body */
 .bot-header{
-  height: 30px;
-  width: 100%;
-  padding: 0;
+  height: 5%;
+  max-width: 100%;
   text-align: right;
+  /* border-bottom: #000;
+  background-color: #333; */
 }
 /* Bot close button */
 .bot-header a{
-  border:gray solid 3px;
+  border:#dddddd solid .5px;
   border-radius: 10px;
-  padding: .5em;
+  /* margin: 1em; */
+  padding: .1em;
+  /* padding-bottom: .1em; */
   text-decoration: none;
-  font: #000000;
+  color: #333;
 }
 
 /* Opens bot once it has been closed */
@@ -53,14 +57,19 @@ body{
   width: 20%;
   background-color: cornflowerblue;
   border-radius: 10px;
-  padding: 2em;
+  padding: 4em;
   text-align: center;
+
+
 }
 
 #bot-hide a{
   text-decoration: none;
   color: #ffffff;
-  font: bold .6em sans-serif;
+  font: bold 2em sans-serif;
 }
-
+#dialog-frame{
+  padding: 8%;
+  background-color: #fff;
+}
 /* User input */
