--- a/ui/components/style/window.css
+++ b/ui/components/style/window.css
@@ -1,5 +1,7 @@
 body{
   font: 1em sans-serif;
+  background-image: url('./sacpdsite.png');
+  background-size: cover;
 }
 /* Hide background */
 .black_overlay{
@@ -22,7 +24,7 @@ body{
   position: absolute;
   top: 25%;
   left: 25%;
-  width: 30%;
+  width: 40%;
   height: 50%;
   padding: 10px;
   padding-left: 0;
@@ -32,6 +34,21 @@ body{
   overflow: auto;
   border-radius: 10px;
 }
+
+@media only screen and (max-device-width: 480px){
+  .bot-window{
+     width: 90%;
+     height: 80%;
+     padding: 3px;
+  }
+}
+
+
+#dialog-frame {
+  padding: 8%;
+  background-color: #fff;
+}
+
 /* Top of window body */
 .bot-header{
   height: 5%;
@@ -59,6 +76,7 @@ body{
   border-radius: 10px;
   padding: 4em;
   text-align: center;
+  z-index: 1002;
 
 
 }
@@ -68,8 +86,5 @@ body{
   color: #ffffff;
   font: bold 2em sans-serif;
 }
-#dialog-frame{
-  padding: 8%;
-  background-color: #fff;
-}
+
 /* User input */
